@startuml ER Diagram

entity "Users" as users {
  *user_id : varchar <<PK>>
  --
  *telegram_id : varchar
  *thread_id : varchar
  *assistant_id : varchar
  username : varchar
  last_time_used : datetime
  create_time : datetime
  update_time : datetime
}

entity "Messages" as messages {
  *id : int <<PK>>
  --
  *user_id : varchar <<FK>>
  assistant_id : varchar
  thread_id : varchar
  *message : text
  *timestamp : bigint
  *type : enum
  ticketOpen : boolean
  ticket_id : int
  create_time : datetime
  update_time : datetime
}

entity "Assistants" as assistants {
  *id : int <<PK>>
  --
  *assistant_id : varchar
  *name : varchar
  img : varchar
  create_time : datetime
  update_time : datetime
}

entity "Scores" as scores {
  *id : int <<PK>>
  --
  *question : text
  *answer : text
  *score : float
  create_time : datetime
  update_time : datetime
}

users ||--o{ messages : has
messages }o--|| assistants : generated by
messages }o--o| messages : relates to (ticket)

@enduml
